--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ chrono = "0.4.26"
 clap = { version = "4.3.4", features = ["derive"] }
 confy = "0.5.1"
 dirs = "5.0.1"
+fuzzy-matcher = "0.3.7"
 lazy_static = "1.4.0"
 serde = { version = "1.0.164", features = ["derive"] }
 timer = "0.2.0"
 toml = "0.7.4"
+which = "4.4.0"
