--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ serde = { version = "1.0.164", features = ["derive"] }
 timer = "0.2.0"
 toml = "0.7.4"
 which = "4.4.0"
+
+[profile.release]
+opt-level = 3
