--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ confy = "0.5.1"
 dirs = "5.0.1"
 fuzzy-matcher = "0.3.7"
 lazy_static = "1.4.0"
+path-dedot = "3.1.0"
 serde = { version = "1.0.164", features = ["derive"] }
+single-instance = "0.3.3"
+sysinfo = "0.29.2"
 timer = "0.2.0"
 toml = "0.7.4"
 which = "4.4.0"
