--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://github.com/Aethar01/hitsuki"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+casual = "0.2.0"
 chrono = "0.4.26"
 clap = { version = "4.3.4", features = ["derive"] }
 confy = "0.5.1"
